# WorkbenchIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _indexer_output.txt  api_server.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_seed_endpoint.py  verify_deep_dive.py
.github/: copilot-instructions.md
app/: auth.py  config.py  content_understanding_client.py  customer360.py  mistral_ocr_client.py  openai_client.py  personas.py  processing.py  seed_data_customers.py  underwriting_policies.py
docs/: ARCHITECTURE-AGENTIC-V2-TARGET.md  ARCHITECTURE-AGENTIC.md  GROUPAMA-WORKFLOW.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
infra/: deploy.ps1  deploy.sh  main.bicep  main.bicepparam
prompts/: glossary.json  habitation-claims-policies.json  large-document-prompts.json  mortgage-underwriting-policies.json  prompts.json  risk-analysis-prompts.json
scripts/: _check_cloud_all.py  _check_cloud_bs.py  _check_cloud_detail.py  _check_indexes.py  _check_pg_version.py  _check_prod_db.py  _check_stats.py  _fix_constraints.py  _setup_tables.py  bing-grounding-arm.json  generate_arch_pdf.mjs  generate_demo_claim.py  generate_demo_underwriting.py  index-all-policies.ps1  index_claims_policies.py  index_pdf_policies.py  mortgage_test_results.json  seed_customer360.py  setup_demo_analyzers.py  setup_image_analyzers.sh  test_mortgage_samples.py
tests/: test_api_key_auth.py  test_deep_dive_prompts.py  test_extraction_pipeline.py  test_format_compatibility.py  (+4 more)
(+438 files in other folders)
